--- a/_faq/accommodation/005_tm30.md
+++ b/_faq/accommodation/005_tm30.md
@@ -8,7 +8,7 @@ hashtag: tm30
 
 ### Как проходить регистрацию?
 
-Зарегистрироваться необходимо самостоятельно, если вы вселились в собственный дом. Если же вы арендовали жилье через агентство недвижимости, то просто обратившись к хозяину жилья и он все разрулит. В случае с заселением в отель можно ни о чем не беспокоиться, так как персонал обычно проводит эту процедуру самостоятельно, без беспокойства гостя.
+Зарегистрироваться необходимо самостоятельно, если вы вселились в собственный дом. Если же вы арендовали жилье через агентство недвижимости, то просто обратившись к хозяину жилья и он решит этот вопрос. В случае с заселением в отель можно ни о чем не беспокоиться, так как персонал обычно проводит эту процедуру самостоятельно, без беспокойства гостя.
 
 ### Когда необходимо делать регистрацию по форме ТМ30?
 
@@ -20,4 +20,4 @@ hashtag: tm30
 
 ### Что будет, если не заполнить форму TM. 30?
 
-В случае, если иностранец забыл о регистрации или намеренно пропустил, то в случае контакта с иммиграционной полицией есть шанс получить штраф в размере 10 000 бат. Так же в случае продления визы в иммиграционной службе по месту жительства можно столкнуться с отказом ввиду некорретности адреса регистрации.
+В случае, если иностранец забыл о регистрации или намеренно пропустил, то в случае контакта с иммиграционной полицией есть шанс получить штраф. Так же в случае продления визы в иммиграционной службе по месту жительства можно столкнуться с отказом ввиду некорретности адреса регистрации.
