--- a/_faq/language/005_eng.md
+++ b/_faq/language/005_eng.md
@@ -4,4 +4,12 @@ ldjson: yes
 hashtag: eng
 ---
 
-* Две самые известные школы иностранных языков на Пхукете расположены в районе кольца Чалонг: Lingua Plus Language School Phuket и TTT Language School Phuket. В последней вы получите вдобавок возможность изучать французский, немецкий, итальянский и русский.
+Вот пара неплохих школ на Пхукете для изучения английского языка.
+
+### [Patong Language School](https://g.page/PhuketLanguageSchool?share)
+
+Находится по адресу 5/11-12 Had, Kammala - Patong Rd, Pa Tong, Kathu District, Phuket 83150. Телефон 0950173344, Веб сайт: [http://www.phuket-languageschool.com/](http://www.phuket-languageschool.com/). Имеется пометка, что владелец школы женщина. Нам неизвестно, для чего это, но может быть именно для вас это окажется важным.
+
+### [iSpeak School](https://goo.gl/maps/bgrFb1EpUwK7Zpx5A)
+
+Школа находится по адресу 32, 99, Ratsada, Mueang Phuket District, 83000, телефон 0956916841.
