--- a/_faq/accommodation/005_tm30.md
+++ b/_faq/accommodation/005_tm30.md
@@ -20,4 +20,4 @@ hashtag: tm30
 
 ### Что будет, если не заполнить форму TM. 30?
 
-В случае, если иностранец забыл о регистрации или намеренно пропустил, то в случае контакта с иммиграционной полицией есть шанс получить штраф. Так же в случае продления визы в иммиграционной службе по месту жительства можно столкнуться с отказом ввиду некорретности адреса регистрации.
+В случае, если иностранец забыл о регистрации или намеренно пропустил, то в случае контакта с иммиграционной полицией есть шанс получить штраф. Так же в случае продления визы в иммиграционной службе по месту жительства можно столкнуться с отказом ввиду некорректности адреса регистрации.
