--- a/_faq/language/005_eng.md
+++ b/_faq/language/005_eng.md
@@ -1,5 +1,5 @@
 ---
-question: Где можно выучить английский на пхукете?
+question: Где можно выучить английский на Пхукете?
 ldjson: yes
 hashtag: eng
 ---
